--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,6 +1,46 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+::-webkit-scrollbar {
+  width: 5px;
+  height: 5px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: 5px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
+.scroll-container::-webkit-scrollbar {
+  width: 6px; /* Set the width of the scrollbar */
+}
+
+.scroll-container::-webkit-scrollbar-thumb {
+  background-color: #adb2bb; /* Set the color of the scrollbar thumb */
+  border-radius: 3px; /* Set the border radius of the thumb */
+}
+
+.scroll-container::-webkit-scrollbar-thumb:hover {
+  background-color: #d1d5db; /* Change the color on hover */
+}
+
+.scroll-container::-webkit-scrollbar-track {
+  background-color: #d1d5db; /* Set the color of the scrollbar track */
+  border-radius: 3px; /* Set the border radius of the track */
+}
+
 :root {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
   font-size: 16px;
