--- a/client/src/index.css
+++ b/client/src/index.css
@@ -42,8 +42,7 @@
 }
 
 :root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
-  font-size: 16px;
+  font-family: 'Ubuntu', sans-serif;  font-size: 16px;
   line-height: 24px;
   font-weight: 400;
  border: 0px;
